--- a/src/components/video/video.module.css
+++ b/src/components/video/video.module.css
@@ -3,8 +3,9 @@
   font-family: Poppins;
   font-size: 48px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 800;
   line-height: 38px;
+  font-style: italic;
   text-align: center;
 }
 
